--- a/Kiznic/AndroidManifest.xml
+++ b/Kiznic/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/CustomTheme" >
         <activity
             android:name="com.hhh.kiznic.MainActivity"
             android:label="@string/app_name" >
@@ -22,6 +22,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name="MyPageActivity"></activity>
+        <activity android:name="SearchActivity"></activity>
+        <activity android:name="DetailPageActivity"></activity>
+        <activity android:name="RecommendListActivity"></activity>
     </application>
 
 </manifest>
