--- a/Kiznic/.settings/org.eclipse.core.resources.prefs
+++ b/Kiznic/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,5 @@
 eclipse.preferences.version=1
 encoding//src/com/hhh/kiznic/MainActivity.java=UTF-8
+encoding//src/com/hhh/kiznic/util/Util.java=UTF-8
+encoding/<project>=UTF-8
+separateDerivedEncodings=true
