--- a/Kiznic/bin/AndroidManifest.xml
+++ b/Kiznic/bin/AndroidManifest.xml
@@ -32,7 +32,7 @@
         <activity android:name="MyPageActivity"></activity>
         <activity android:name="SearchActivity"></activity>
         <activity android:name="DetailPageActivity"></activity>
-        <activity android:name="RecommendListActivity"></activity>
+        <activity android:name="SearchcategoryDialog"></activity>
     </application>
 
 </manifest>
