--- a/Kiznic/AndroidManifest.xml
+++ b/Kiznic/AndroidManifest.xml
@@ -22,17 +22,22 @@
         android:theme="@style/CustomTheme" >
         <activity
             android:name="com.hhh.kiznic.MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="MyPageActivity"></activity>
-        <activity android:name="SearchActivity"></activity>
-        <activity android:name="DetailPageActivity"></activity>
-        <activity android:name="SearchcategoryDialog"></activity>
+        <activity android:name="MyPageActivity"
+            android:screenOrientation="portrait"></activity>
+        <activity android:name="SearchActivity"
+            android:screenOrientation="portrait"></activity>
+        <activity android:name="DetailPageActivity"
+            android:screenOrientation="portrait"></activity>
+        <activity android:name="SearchcategoryDialog"
+            android:screenOrientation="portrait"></activity>
     </application>
 
 </manifest>
