--- a/Kiznic/AndroidManifest.xml
+++ b/Kiznic/AndroidManifest.xml
@@ -22,14 +22,7 @@
         android:theme="@style/CustomTheme" >
         <activity
             android:name="com.hhh.kiznic.MainActivity"
-            android:label="@string/app_name"
-            android:screenOrientation="portrait" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+            android:screenOrientation="portrait"></activity>
         <activity android:name="MyPageActivity"
             android:screenOrientation="portrait"></activity>
         <activity android:name="SearchActivity"
@@ -38,6 +31,14 @@
             android:screenOrientation="portrait"></activity>
         <activity android:name="SearchcategoryDialog"
             android:screenOrientation="portrait"></activity>
+        <activity android:name="MainFragmentActivity"
+            android:screenOrientation="portrait" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
