e-mail 전송 기능, 메인 원스탑 안전 신고 기능 추가

--- a/Kiznic/AndroidManifest.xml
+++ b/Kiznic/AndroidManifest.xml
@@ -35,6 +35,8 @@
             android:theme="@android:style/Theme.NoTitleBar"></activity>
         <activity android:name="SearchcategoryDialog"
             android:screenOrientation="portrait"></activity>
+         <activity android:name="SendEmailActivity"
+            android:screenOrientation="portrait"></activity>
         <activity android:name="com.hhh.kiznic.bluetooth.DeviceListActivity"
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.DeviceDefault.Dialog"
