이메일 수정, 각각 리스트뷰의 날씨 제거, splash Activity 로딩 타임 적용

--- a/Kiznic/AndroidManifest.xml
+++ b/Kiznic/AndroidManifest.xml
@@ -25,14 +25,17 @@
         android:theme="@style/ThemeHoloWithActionBar">
         <activity
             android:name="com.hhh.kiznic.MainActivity"
-            android:screenOrientation="portrait"></activity>
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.NoTitleBar">>
+            
+        </activity>
         <activity android:name="MyPageActivity"
             android:screenOrientation="portrait"></activity>
         <activity android:name="SearchActivity"
             android:screenOrientation="portrait"></activity>
         <activity android:name="SplashActivity"
             android:screenOrientation="portrait"
-            android:theme="@android:style/Theme.NoTitleBar.Fullscreen">"
+            android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
              <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
