--- a/Kiznic/AndroidManifest.xml
+++ b/Kiznic/AndroidManifest.xml
@@ -22,7 +22,8 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_kiznic_app"
         android:label="@string/app_name"
-        android:theme="@style/ThemeHoloWithActionBar">
+        android:theme="@style/ThemeHoloWithActionBar"
+        android:largeHeap="true">
         <activity
             android:name="com.hhh.kiznic.MainActivity"
             android:screenOrientation="portrait"
