--- a/Kiznic/AndroidManifest.xml
+++ b/Kiznic/AndroidManifest.xml
@@ -35,7 +35,14 @@
         </activity>
         
          <activity android:name="EventActivity"
-            android:screenOrientation="portrait"></activity>
+            android:screenOrientation="portrait">
+           <intent-filter>
+                <action android:name="android.intent.action.VIEW"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+                <category android:name="android.intent.category.BROWSABLE"/>
+                <data android:host="@string/kakaolink_host" android:scheme="@string/kakao_scheme"/>
+            </intent-filter>
+         </activity>
         
         
         <activity android:name="MyPageActivity"
@@ -48,6 +55,9 @@
              <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
+               	            <data android:scheme="@string/kakao_scheme" android:host="@string/kakaolink_host" /> 
+                
+                
             </intent-filter>
         </activity>
         <activity android:name="DetailPageActivity"
@@ -72,6 +82,11 @@
            
         </activity>
         <activity android:name="MyPageNicknameDialog"></activity>
+        
+        <meta-data
+       	 android:name="com.kakao.sdk.AppKey"
+       	 android:value="@string/kakao_app_key" />
+        
     </application>
 
 </manifest>
